# Alpha-agents

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.py
.claude/agents/: code-risk-critic.md  perfect-code-developer.md  prompt-reviewer.md  rate-limit-tuner.md  sse-debugger.md  workflow-tracer.md  workspace-cleaner.md
agents/analysis_agent/: technical.py
agents/data_agent/collectors/: cryptopanic.py  fear_greed.py  ohlcv.py  trends.py
agents/execution_agent/: executor.py  paper_trader.py
agents/risk_agent/: risk.py
agents/strategy_agent/: feature_builder.py  labeler.py  trainer.py  weekly_retrain.py  xgb_model.py
backtest/: engine.py
config/: settings.py
graph/: graph.py  state.py
models/: xgb_bnbusdt.pkl  xgb_btcusdt.pkl  xgb_ethusdt.pkl  xgb_solusdt.pkl  xgb_xrpusdt.pkl
scripts/: backfill_ohlcv.py  backfill_trends.py  dashboard.py  oos_validation.py  paper_status.py  run_backtest.py  upload_models_to_db.py
storage/: __init__.py  postgres_manager.py  redis_manager.py
web/: app.py
